force-app/main/default/objects/WorkOrder/fields/Call_End__c.field-meta.xml
<CustomField>
    <fullName>Call_End__c</fullName>
    <formula>Conference__r.Call_End__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Call End</label>
    <type>DateTime</type>
</CustomField>