force-app/main/default/objects/WorkOrder/fields/Call_Start__c.field-meta.xml
<CustomField>
    <fullName>Call_Start__c</fullName>
    <formula>Conference__r.Call_Start__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Call Start</label>
    <type>DateTime</type>
</CustomField>