force-app/main/default/objects/WorkOrder/fields/Call_Status__c.field-meta.xml
<CustomField>
    <fullName>Call_Status__c</fullName>
    <formula>TEXT(Conference__r.Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Call Status</label>
    <type>Text</type>
</CustomField>