force-app/main/default/objects/WorkOrder/fields/Conference__c.field-meta.xml
<CustomField>
    <fullName>Conference__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Conference</label>
    <referenceTo>Conference__c</referenceTo>
    <relationshipLabel>Work Orders</relationshipLabel>
    <relationshipName>Work_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>