force-app/main/default/objects/WorkOrder/fields/NoFlow__c.field-meta.xml
<CustomField>
    <fullName>NoFlow__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NoFlow</label>
    <type>Checkbox</type>
</CustomField>