force-app/main/default/objects/WorkOrder/fields/Role_ID__c.field-meta.xml
<CustomField>
    <fullName>Role_ID__c</fullName>
    <externalId>true</externalId>
    <label>Role ID</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>