force-app/main/default/objects/WorkOrder/fields/Sort_Key__c.field-meta.xml
<CustomField>
    <fullName>Sort_Key__c</fullName>
    <formula>IF(
    NOW()-(1/24) &lt; EndDate
,
    StartDate - NOW()
,
    1000 + (StartDate - NOW())
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sort Key</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>